--- a/src/Pages/globalstyle.css
+++ b/src/Pages/globalstyle.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-html,body {
+html,
+body {
   background-image: linear-gradient(
       240deg,
       rgba(125, 211, 235, 0.2) 0%,
